--- a/python/DistanceFlying.ipynb
+++ b/python/DistanceFlying.ipynb
@@ -69,6 +69,22 @@
     "plt.scatter(freqs_interp, [0.5] * len(freqs_interp), label=\"interpolated\")\n",
     "plt.scatter(freqs, [0.6] * len(freqs), label=\"original\")\n",
     "plt.legend()\n",
+    "plt.ylim(0, 1)\n",
+    "\n",
+    "freqs =  array([1156., 1281., 1406., 1546., 1671., 1796., 1921., 2062., 2187.,\n",
+    "       2312., 2437., 2562., 2718., 2843., 2953., 3109., 3234., 3359.,\n",
+    "       3468., 3625., 3734., 3859., 3984., 4125., 4265., 4421., 4515.,\n",
+    "       4687., 4781., 4875., 5078., 5187.], dtype=float32) \n",
+    "freqs_interp =  array([1156., 1281., 1406., 1546., 1671., 1796., 1921., 2062., 2187.,\n",
+    "       2312., 2437., 2562., 2718., 2843., 2953., 3109., 3234., 3359.,\n",
+    "       3468., 3625., 3734., 3859., 3984., 4125., 4265., 4421., 4515.,\n",
+    "       4687., 4781., 4875., 5000., 5078., 5187.], dtype=float32)\n",
+    "\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.scatter(freqs_interp, [0.5] * len(freqs_interp), label=\"interpolated\")\n",
+    "plt.scatter(freqs, [0.6] * len(freqs), label=\"original\")\n",
+    "plt.legend()\n",
     "plt.ylim(0, 1)"
    ]
   },
@@ -119,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_matrix(yvalues, results_matrix, gt_values, \n",
+    "def plot_matrix(yvalues, results_matrix, gt_values=None, \n",
     "                xvalues=None, no_deco=False, angles=False, \n",
     "                log=True, n_calib=0):\n",
     "    from utils.plotting_tools import add_colorbar, pcolorfast_custom, FIGSIZE\n",
@@ -146,13 +162,14 @@
     "        \n",
     "    im = ax.pcolormesh(xvalues, yvalues, plot_matrix, cmap=cmap)\n",
     "    \n",
-    "    ax.plot(\n",
-    "        xvalues,\n",
-    "        gt_values,\n",
-    "        color=\"black\",\n",
-    "        label=\"\\\\textbf{ground truth}\",\n",
-    "        marker='x'\n",
-    "    )\n",
+    "    if gt_values is not None:\n",
+    "        ax.plot(\n",
+    "            xvalues,\n",
+    "            gt_values,\n",
+    "            color=\"black\",\n",
+    "            label=\"\\\\textbf{ground truth}\",\n",
+    "            marker='x'\n",
+    "        )\n",
     "    ax.set_ylim(min(yvalues), max(yvalues))\n",
     "    ax.plot(\n",
     "        xvalues,\n",
@@ -328,6 +345,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mics_beam = np.array([[-0.011,  0.048,  0.019,  0.019], [-0.018, -0.017,  0.014, -0.048]])\n",
+    "room_mics =  np.array([[9.418, 9.417, 9.386, 9.448], [3.489, 3.548, 3.519, 3.519]])\n",
+    "\n",
+    "plt.figure()\n",
+    "for i, m in enumerate(mics_beam.T):\n",
+    "    plt.scatter(*m, label=f\"mic{i}\")\n",
+    "plt.axis(\"equal\")\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.figure()\n",
+    "#for i, m in enumerate(mics_beam.T):\n",
+    "for i, m in enumerate(room_mics.T):\n",
+    "    plt.scatter(*m, label=f\"mic{i}\")\n",
+    "plt.axis(\"equal\")\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -338,8 +378,11 @@
     "from generate_filtering_results import angle_error\n",
     "np.random.seed(2)\n",
     "\n",
+    "D_RANGE = [7, 80]\n",
+    "PLOT_D_MAX = 30\n",
+    "\n",
     "no_deco = True\n",
-    "fig_size = (6, 4)\n",
+    "fig_size = (8, 4)\n",
     "\n",
     "chosen_calibration_param = 0.3\n",
     "simplify_angles = False\n",
@@ -356,8 +399,7 @@
     "\n",
     "#fig_cdf.suptitle(f\"angles simplified {simplify_angles}\")\n",
     "\n",
-    "#beamform = False\n",
-    "beamform = True\n",
+    "beamform = False\n",
     "discretization = \"fine\"\n",
     "\n",
     "color = {f\"exp{a}\": \"C0\" if \"new\" in a else \"C1\" for i, a in enumerate(appendices) }\n",
@@ -378,18 +420,8 @@
     "        else:\n",
     "            correct = False\n",
     "            \n",
-    "        if exp_name == \"2021_07_27_epuck_wall\":\n",
-    "            from epuck_description_py.experiments import DISTANCES_CM, WALL_ANGLE_DEG_STEPPER\n",
-    "            gt_distances = DISTANCES_CM\n",
-    "            gt_angles = np.full( len(DISTANCES_CM), WALL_ANGLE_DEG_STEPPER)\n",
-    "        elif exp_name == \"2021_07_08_stepper_fast\":\n",
-    "            print(\"stepper\")\n",
-    "            from crazyflie_description_py.experiments import DISTANCES_CM, WALL_ANGLE_DEG_STEPPER\n",
-    "            gt_distances = DISTANCES_CM\n",
-    "            gt_angles = np.full( len(DISTANCES_CM), WALL_ANGLE_DEG_STEPPER)\n",
-    "        else:\n",
-    "            gt_distances, gt_angles = get_groundtruth_distances(exp_name, appendix, \n",
-    "                                                                flying=True, angles=True, correct=True)\n",
+    "        gt_distances, gt_angles = get_groundtruth_distances(exp_name, appendix, \n",
+    "                                                            flying=True, angles=True, correct=correct)\n",
     "        \n",
     "        if beamform:\n",
     "            fname = f\"results/{name}_results_matrices_{estimator}{appendix}_beamform_new.pkl\"\n",
@@ -418,8 +450,8 @@
     "            n_calib_here = int(np.floor(row[\"calibration param\"]))\n",
     "            d_here = row[\"distances_cm\"]\n",
     "            a_here = row[\"angles_deg\"]\n",
-    "            matrix_distances = row[\"matrix distances\"][0]\n",
-    "            matrix_angles = row[\"matrix angles\"][0]\n",
+    "            matrix_distances = row[\"matrix distances\"]\n",
+    "            matrix_angles = row[\"matrix angles\"]\n",
     "\n",
     "            d_estimates = get_estimates_here(matrix_distances, d_here)\n",
     "\n",
@@ -448,7 +480,7 @@
     "            fig.set_size_inches(*fig_size)\n",
     "\n",
     "    # generate random\n",
-    "    d_random = np.random.choice(range(7, 81), size=len(gt_distances))\n",
+    "    d_random = np.random.choice(range(*D_RANGE), size=len(gt_distances))\n",
     "    a_random = np.random.choice(range(360), size=len(gt_angles))\n",
     "    lines = []; leg_labels = []\n",
     "    axs_cdf[0].plot(sorted(np.abs(d_random-gt_distances)), np.linspace(0, 1, len(gt_distances)), color=color[\"random\"])\n",
@@ -456,8 +488,8 @@
     "    lines.append(line); leg_labels.append(\"random\")\n",
     "    \n",
     "    # generate fixed\n",
-    "    d_fixed = (80 - 7) / 2\n",
-    "    a_fixed = gt_angles[0] + 180\n",
+    "    d_fixed = (D_RANGE[1]-D_RANGE[0]) / 2\n",
+    "    a_fixed = gt_angles[0] + 180 # \n",
     "    line, = axs_cdf[0].plot(sorted(np.abs(d_fixed-gt_distances)), np.linspace(0, 1, len(gt_distances)), ls=\":\", color=color[\"fixed\"])\n",
     "    lines.append(line); leg_labels.append(\"fixed\")\n",
     "\n",
@@ -476,14 +508,151 @@
     "    axs_cdf[1].set_title(\"angle estimation\")\n",
     "    axs_cdf[0].set_ylabel(\"cdf [-]\")\n",
     "    axs_cdf[1].set_ylabel(\"cdf [-]\")\n",
-    "    axs_cdf[0].set_xlim(0, 30)\n",
+    "    axs_cdf[0].set_xlim(0, PLOT_D_MAX)\n",
     "    axs_cdf[1].set_xlim(0, 200)\n",
-    "    fig_cdf.set_size_inches(8, 4)\n",
+    "    fig_cdf.set_size_inches(*fig_size)\n",
     "    fig_cdf.subplots_adjust(wspace=0.3)\n",
     "    if beamform:\n",
     "        save_fig(fig_cdf, f\"plots/experiments/{exp_name}_{discretization.replace(' ','_')}_{estimator}_beamform_cdfs.pdf\")\n",
     "    else:\n",
     "        save_fig(fig_cdf, f\"plots/experiments/{exp_name}_{discretization.replace(' ','_')}_{estimator}_cdfs.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Comparison of datasets"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "no_deco=False\n",
+    "\n",
+    "color = {\"epuck\": \"C0\", \"stepper\": \"C1\"}\n",
+    "color[\"random\"] = \"k\"\n",
+    "color[\"fixed\"] = \"k\"\n",
+    "\n",
+    "estimator = \"particle\"\n",
+    "appendix = \"\"\n",
+    "\n",
+    "fig_cdf, axs_cdf = plt.subplots(1, 2, sharey=True)\n",
+    "fig_cdf.set_size_inches(*fig_size_cdf)\n",
+    "\n",
+    "linestyles = {\n",
+    "    \"pyroom\": \":\",\n",
+    "    \"\": \"-\"\n",
+    "}\n",
+    "names = {\n",
+    "    \"pyroom\": \" simulated\",\n",
+    "    \"\": \"\"\n",
+    "}\n",
+    "\n",
+    "fig_hor, (ax_dist, ax_ang) = plt.subplots(2, 1, sharex=True)\n",
+    "\n",
+    "for exp_name in [\"2021_07_08_stepper_fast\", \"2021_07_27_epuck_wall\"]:\n",
+    "    if exp_name == \"2021_07_27_epuck_wall\":\n",
+    "        print(\"epuck\")\n",
+    "        from epuck_description_py.experiments import DISTANCES_CM, WALL_ANGLE_DEG_STEPPER\n",
+    "        gt_distances = DISTANCES_CM\n",
+    "        gt_angles = np.full(len(DISTANCES_CM), WALL_ANGLE_DEG_STEPPER)\n",
+    "        name = \"epuck\"\n",
+    "    elif exp_name == \"2021_07_08_stepper_fast\":\n",
+    "        print(\"stepper\")\n",
+    "        from crazyflie_description_py.experiments import DISTANCES_CM, WALL_ANGLE_DEG_STEPPER\n",
+    "        gt_distances = DISTANCES_CM\n",
+    "        gt_angles = np.full(len(DISTANCES_CM), WALL_ANGLE_DEG_STEPPER)\n",
+    "        name = \"stepper\"\n",
+    "        \n",
+    "    for simulate in [\"\", \"pyroom\"]:\n",
+    "        fname = f\"results/{name}_results_matrices_{estimator}{appendix}{simulate}_new.pkl\"\n",
+    "        df_here = pd.read_pickle(fname) \n",
+    "        for i, row in df_here.iterrows():\n",
+    "            d_here = row[\"distances_cm\"]\n",
+    "            a_here = row[\"angles_deg\"]\n",
+    "            matrix_distances = row[\"matrix distances\"]\n",
+    "            matrix_angles = row[\"matrix angles\"]\n",
+    "\n",
+    "            d_estimates = get_estimates_here(matrix_distances, d_here)\n",
+    "            gt_distances_here = row.gt_distances_cm\n",
+    "            gt_angles_here = row.gt_angles_deg\n",
+    "\n",
+    "            d_errors = d_estimates - gt_distances_here\n",
+    "            cdf_distances = np.sort(np.abs(d_errors))\n",
+    "            y = np.linspace(0, 1, len(cdf_distances))\n",
+    "            axs_cdf[0].plot(cdf_distances, y, ls=linestyles[simulate], label=name+names[simulate], color=color[name])\n",
+    "            ax_dist.plot(gt_distances_here, d_errors, color=color[name], ls=linestyles[simulate])\n",
+    "\n",
+    "            a_estimates = get_estimates_here(matrix_angles, a_here)\n",
+    "\n",
+    "            a_errors = angle_error(a_estimates, gt_angles_here)\n",
+    "            \n",
+    "            ax_ang.plot(gt_distances_here, a_errors, color=color[name], ls=linestyles[simulate])\n",
+    "            \n",
+    "            cdf_angles = np.sort(np.abs(a_errors))\n",
+    "            y = np.linspace(0, 1, len(cdf_angles))\n",
+    "            axs_cdf[1].plot(cdf_angles, y, ls=linestyles[simulate], label=name+names[simulate], color=color[name])\n",
+    "\n",
+    "            fig, ax = plot_matrix(d_here, matrix_distances, #xvalues=times, \n",
+    "                                  gt_values=gt_distances_here,\n",
+    "                                  no_deco=no_deco)\n",
+    "            ax.set_title(name)\n",
+    "            fig.set_size_inches(*fig_size)\n",
+    "\n",
+    "            fig, ax = plot_matrix(a_here, matrix_angles, \n",
+    "                                  gt_values=gt_angles_here, \n",
+    "                                  no_deco=no_deco)\n",
+    "            ax.set_title(name)\n",
+    "            fig.set_size_inches(*fig_size)\n",
+    "\n",
+    "# generate random\n",
+    "d_random = np.random.choice(range(7, 81), size=len(gt_distances_here))\n",
+    "a_random = np.random.choice(range(360), size=len(gt_angles_here))\n",
+    "axs_cdf[0].plot(sorted(np.abs(d_random-gt_distances_here)), np.linspace(0, 1, len(gt_distances_here)), color=color[\"random\"], label=\"random\")\n",
+    "axs_cdf[1].plot(sorted(np.abs(angle_error(a_random, gt_angles_here))), np.linspace(0, 1, len(gt_angles_here)), color=color[\"random\"], label=\"random\")\n",
+    "\n",
+    "# generate fixed\n",
+    "d_fixed = (50-7)/2\n",
+    "a_fixed = gt_angles[0] + 180\n",
+    "axs_cdf[0].plot(sorted(np.abs(d_fixed-gt_distances_here)), np.linspace(0, 1, len(gt_distances_here)), ls=\":\", color=color[\"fixed\"], label=\"fixed\")\n",
+    "axs_cdf[1].plot(sorted(np.abs(angle_error(a_fixed, gt_angles_here))), np.linspace(0, 1, len(gt_angles_here)), ls=\":\", color=color[\"fixed\"], label=\"fixed\")\n",
+    "axs_cdf[1].legend(title=\"used data\", loc=\"upper left\", bbox_to_anchor=[1.0, 0.75])\n",
+    "\n",
+    "axs_cdf[0].grid(True)\n",
+    "axs_cdf[1].grid(True)\n",
+    "axs_cdf[0].set_xlabel(\"absolute distance error [cm]\")\n",
+    "axs_cdf[1].set_xlabel(\"absolute angle error [deg]\")\n",
+    "axs_cdf[0].set_title(\"distance estimation\")\n",
+    "axs_cdf[1].set_title(\"angle estimation\")\n",
+    "axs_cdf[0].set_ylabel(\"cdf [-]\")\n",
+    "#axs_cdf[1].set_ylabel(\"cdf [-]\")\n",
+    "axs_cdf[0].set_xlim(0, PLOT_D_MAX)\n",
+    "axs_cdf[1].set_xlim(0, 200)\n",
+    "fig_cdf.set_size_inches(8, 4)\n",
+    "#fig_cdf.subplots_adjust(wspace=0.3)\n",
+    "\n",
+    "fig_hor.set_size_inches(4, 4)\n",
+    "ax_ang.set_xlabel(\"distance [cm]\")\n",
+    "#ax_dist.set_xlabel(\"distance [cm]\")\n",
+    "ax_dist.set_title(\"error evolution\")\n",
+    "ax_ang.set_ylabel(\"angle error [deg]\", x=1.5)\n",
+    "ax_ang.grid()\n",
+    "ax_dist.grid()\n",
+    "ax_dist.set_ylabel(\"distance error [cm]\")\n",
+    "if beamform:\n",
+    "    save_fig(fig_cdf, f\"plots/experiments/comparison_{estimator}_beamform_cdfs.pdf\")\n",
+    "    save_fig(fig_hor, f\"plots/experiments/comparison_{estimator}_beamform.pdf\")\n",
+    "else:\n",
+    "    save_fig(fig_cdf, f\"plots/experiments/comparison_{estimator}_cdfs.pdf\")\n",
+    "    save_fig(fig_hor, f\"plots/experiments/comparison_{estimator}.pdf\")"
    ]
   },
   {
