--- a/python/WallStudy.ipynb
+++ b/python/WallStudy.ipynb
@@ -523,7 +523,11 @@
    "outputs": [],
    "source": [
     "from utils.simulation import get_freq_slice_pyroom, WIDEBAND_FILE, create_wideband_signal\n",
-    "from crazyflie_description_py.parameters import N_BUFFER, FS\n",
+    "from utils.constants import PLATFORM\n",
+    "if PLATFORM == \"epuck\":\n",
+    "    from epuck_description_py.parameters import N_BUFFER, FS\n",
+    "elif PLATFORM == \"crazyflie\":\n",
+    "    from crazyflie_description_py.parameters import N_BUFFER, FS\n",
     "\n",
     "print(FS)\n",
     "\n",
@@ -531,7 +535,7 @@
     "distances = np.arange(10, 60, step=1)\n",
     "frequencies = np.fft.rfftfreq(N_BUFFER, 1 / FS)\n",
     "min_freq = 100\n",
-    "max_freq = 5000\n",
+    "max_freq = 6000\n",
     "min_dist = 1\n",
     "max_dist = 50\n",
     "freq_start = int(min_freq / max(frequencies) * len(frequencies))\n",
@@ -566,7 +570,7 @@
     "        signal = np.load(WIDEBAND_FILE)\n",
     "        \n",
     "    except:\n",
-    "        print(\"creating wideband signal...\")\n",
+    "        print(\"creating wideband signal...\", freq[:10], freq[-10:])\n",
     "        signal = create_wideband_signal(freq)\n",
     "        np.save(WIDEBAND_FILE, signal)\n",
     "        print(f\"saved as {WIDEBAND_FILE}\")\n",
